fix: move header at the top of DOM by adding maximum z-index - 99999

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 :host { display: contents; }
 
 .header {
+  z-index: 99999;
   height: 80px;
   position: sticky;
   top: 0;
